# agentguard

./: .agentguardignore  .agentlintignore  .editorconfig  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  PUBLISHING.md  README.md  SECURITY.md  action.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  false_positive.yml
.github/workflows/: agent-factory.yml  ci.yml  codeql.yml  publish.yml
.understand-anything/: .understandignore
agent_lint/: __init__.py  baseline.py  cli.py  config.py  frameworks.py  linter.py  models.py  project.py  report.py  rules.py
agentguard/: __init__.py  __main__.py  automation.py  baseline.py  cli.py  config.py  desktop.py  fix.py  frameworks.py  interop.py  linter.py  models.py  project.py  remote.py  report.py  rules.py  workflow.py  workspace.py
corpus/: manifest.json
docs/: agent-factory.md  attacks.md  findings.md  rules.md  threat-mapping.md
docs/evidence/: workflow-budget.json
docs/examples/: README.md  after.md  before.md
docs/examples/attacks/agents/: 04-disabled-confirmation.md
docs/examples/poc/: README.md  exploit_demo.py  vulnerable_agent.md
eval/: adversarial_review.py  benchmark.py  field_study.py  naive_baselines.py  quality-baseline.json
evidence/: marketplace-snapshot.json  workflow-budget.json
examples/: README.md  after.md
examples/attacks/agents/: 01-indirect-injection.md  02-markdown-exfil.md  03-subagent-propagation.md  06-hidden-instructions.md
examples/attacks/commands/: 05-command-arg-injection.md
examples/poc/: README.md  exploit_demo.py  hardened_agent.md  untrusted_report.md
paper/: agentguard-paper.docx  agentguard-paper.html  main.tex  refs.bib
plugins/agent-armor/: before-after.md
plugins/agent-armor/plugins/adversarial-critic/.claude-plugin/: plugin.json
plugins/agent-armor/plugins/adversarial-critic/agents/: adversarial-critic.md
plugins/agent-armor/plugins/agent-orchestrator/.claude-plugin/: plugin.json
plugins/agent-armor/plugins/agent-orchestrator/agents/: orchestrator.md
plugins/agent-armor/plugins/critique-loop/.claude-plugin/: plugin.json
plugins/agent-armor/plugins/critique-loop/commands/: critique.md
results/: field_study_cross_distribution.json
schemas/: corpus-audit.schema.json
scripts/: pr_review_check.sh
skills/agentguard-corpus-analyst/: SKILL.md
skills/agentguard-corpus-analyst/references/: data-model.md
skills/agentguard-maintainer/: SKILL.md
skills/agentguard-maintainer/references/: quality-contract.md
tests/: test_adversarial_review.py  test_change_review.py  test_cli.py  test_contracts.py  test_corpus_audit.py  test_discover.py  test_distribution_assets.py  test_features.py  test_interop.py  test_project.py  test_publish_audit_issue.py  test_query_audit.py  test_render_exfil.py  test_rules.py  test_sensitive_precision.py  test_validate_audit.py  test_workflow_audit.py
tests/fixtures/: bad_agent.md  good_agent.md  insecure_agent.md  interop_bad.json  interop_good.json
tools/: change_review.py  corpus_audit.py  publish_audit_issue.py  query_audit.py  validate_audit.py  verify_contracts.py  workflow_audit.py
