[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard"
version = "0.1.0"
description = "A prompt-injection & capability scanner for AI agent, command, and skill definitions."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ying Chen" }]
requires-python = ">=3.9"
keywords = ["claude-code", "agents", "llm", "security", "prompt-injection", "linter", "ci", "agent-reliability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yingchen-coding/agentguard"
Issues = "https://github.com/yingchen-coding/agentguard/issues"

[project.scripts]
agentguard = "agentguard.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6", "build>=1"]

[tool.setuptools]
packages = ["agentguard"]

[tool.setuptools.package-data]
agentguard = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
