[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard"
version = "0.1.0"
description = "A prompt-injection & capability scanner for AI agent, command, and skill definitions."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ying Chen" }]
requires-python = ">=3.9"
keywords = ["claude-code", "agents", "llm", "security", "prompt-injection", "linter", "ci", "agent-reliability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yingchen-coding/agentguard"
Issues = "https://github.com/yingchen-coding/agentguard/issues"

[project.scripts]
agentguard = "agentguard.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6", "mypy>=1.8", "build>=1"]

[tool.setuptools]
packages = ["agentguard"]

[tool.setuptools.package-data]
agentguard = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Beyond the defaults: bugbear, comprehensions, simplify, pyupgrade, isort, perf, pie, ruff.
select = ["E", "F", "W", "B", "C4", "SIM", "UP", "I", "RUF", "PIE", "PERF"]
# Em/en dashes and arrows (–, →, ·) are intentional typography in findings and docs.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# Tests and the benchmark embed long inline definition strings on purpose.
"tests/*" = ["E501"]
"eval/*" = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
files = ["agentguard"]

# tomllib is a 3.11+ stdlib module; on the 3.9 baseline it's imported under a
# try/except ModuleNotFoundError that falls back to a hand-rolled mini-parser.
[[tool.mypy.overrides]]
module = "tomllib"
ignore_missing_imports = true
